--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,50 @@
-body{
+body {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.box{
+.box {
     background-color: aliceblue;
     margin: 20px;
     padding: 7%;
 }
 
-.maindiv{
+.maindiv {
     border-radius: 10px 30px;
     font-size: 25px;
     color: rgb(62, 62, 62);
 }
 
-.secdiv{
+.secdiv {
     border-radius: 30px 10px;
 }
 
-#text{
+#text {
     font-size: 30px;
     font-weight: 600;
     color: rgb(62, 62, 62);
 }
 
-ul{
+ul {
     font-size: 20px;
     color: rgb(170, 0, 0);
+}
+
+li[out-game="outdoor"] {
+    color: green;
+}
+
+li:hover {
+    text-decoration: underline;
+}
+
+ul::before {
+    content: "My Favorite Sports:";
+    font-weight: bold;
+}
+
+.secdiv > ul {
+    margin-top: 20px;
 }
